*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6043 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-awards-MR/aw-awards.html
+++ b/kra-coeus-awards-MR/aw-awards.html
@@ -113,7 +113,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
           </table>
           <!-- TAB -->
-          <div class="tab-container" align="center" id="G02" style="display: none;">
+          <div class="tab-container" align="center" id="G02" style="display: nonee;">
             <div class="h2-container"><span class="subhead-left">
               <h2>Document Overview</h2>
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-awards-MR-Backup/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
@@ -127,8 +127,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   </td>
                   <th colspan="1">&nbsp;
                     <label for="document.explanation">Explanation:  </label>                  </th>
-                  <td align="left" valign="middle"><textarea name="document.explanation" tabindex="0" cols="40" rows="3" style="" id="document.explanation"></textarea>
-                  </td>
+                  <td align="left" valign="middle">&nbsp;                  </td>
                 </tr>
                 <tr>
                   <th rowspan="1" colspan="1" align="left">&nbsp;
@@ -150,9 +149,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width=12 height=29 align=absmiddle></td>
             </tr>
           </table>
-          <div class="tab-container" align=center id="G111" style="display: none;">
+          <div class="tab-container" align=center id="G111" style="display: nonee;">
             <div class="tab-container-error">
-              <div class="left-errmsg-tab"></div>
+              <div class="left-errmsg-tab">
+                <textarea name="document.explanation" tabindex="0" cols="40" rows="3" style="" id="document.explanation"></textarea>
+              </div>
             </div>
             <div class="h2-container"><span class="subhead-left">
               <h2><span class="tabtable1-left">Proposal Information</span></h2>
@@ -232,7 +233,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tr>
           </table>
           
-          <div class="tab-container" align=center id="G823" style="display: none;">
+          <div class="tab-container" align=center id="G823" style="display: nonee;">
             <div class="tab-container-error">
               <div class="left-errmsg-tab"></div>
             </div>
