*** empty log message ***
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6052 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coeus-awards-MR/aw-awards.html
+++ b/kra-coeus-awards-MR/aw-awards.html
@@ -151,9 +151,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </table>
           <div class="tab-container" align=center id="G111" style="display: nonee;">
             <div class="tab-container-error">
-              <div class="left-errmsg-tab">
-                <textarea name="document.explanation" tabindex="0" cols="40" rows="3" style="" id="document.explanation"></textarea>
-              </div>
+              <div class="left-errmsg-tab">              </div>
             </div>
             <div class="h2-container"><span class="subhead-left">
               <h2><span class="tabtable1-left">Proposal Information</span></h2>
