--- a/kra-coeus-awards-MR/aw-actions.html
+++ b/kra-coeus-awards-MR/aw-actions.html
@@ -232,7 +232,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </div>
             <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
               <tr>
-                <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Heirarchy</td>
+                <td class="tabtable1-left"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Hierarchy</td>
                 <td class="tabtable1-mid1">&nbsp;</td>
                 <td class="tabtable2-mid"><a href="#" id="A05" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F05" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
