--- a/kra-coeus-dev/prop-proposal.html
+++ b/kra-coeus-dev/prop-proposal.html
@@ -479,7 +479,7 @@ function addLoadEvent(func) {
               <tr>
                 <th><div align=right>Authorized Representative Name &amp; Address:</div></th>
                 <td> Bunten Lex<br>
-                  Informed Diagnostics, Inc.<br>
+                  Massachusetts Institute of Technology<br>
                   1050 E. Duane Ave<br>
                   Suite 1<br>
                   Sunnyvale<br>
