--- a/kra-coeus-irb-8-27/irb-protocol.html
+++ b/kra-coeus-irb-8-27/irb-protocol.html
@@ -260,16 +260,16 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table cellpadding=0 cellspacing=0 summary="view/edit document overview information">
               <tr>
                 <th><div align="right">Applicant Organization:</div></th>
-                <td>Informed Diagnostics, Inc. <a href="#">
+                <td>Massachusetts Institute of Technology<a href="#">
                   <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
                   </a> <a href="#">
                   <input type="image" class="nobord" src="../images/book_open.png" alt="inquiry">
-                  </a></td>
+                </a></td>
               </tr>
               <tr>
                 <th><div align=right>Authorized Representative Name &amp; Address:</div></th>
                 <td> Bunten Lex<br>
-                  Informed Diagnostics, Inc.<br>
+                  Massachusetts Institute of Technology<br>
                   1050 E. Duane Ave<br>
                   Suite 1<br>
                   Sunnyvale<br>
@@ -281,10 +281,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
               <tr>
                 <th width="20%"><div align=right>Performing Organization:</div></th>
-                <td width="30%">Informed Diagnostics, Inc. <a href="#">
+                <td width="30%">Massachusetts Institute of Technology<a href="#">
                   <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
                   <input type="image" class="nobord" src="../images/book_open.png" alt="inquiry">
-                  </a></td>
+                </a></td>
               </tr>
             </table>
             <div class="h2-container"><span class="subhead-left">
